force-app/main/default/objects/vlocity_cmt__ObjectAppliedResult__c/fields/vlocity_cmt__Result__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Result__c</fullName>
    <description>Serialized object containing information about the rules that were applied and their results.</description>
    <label>Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>