force-app/main/default/objects/vlocity_cmt__ObjectAppliedResult__c/fields/vlocity_cmt__StateTransitionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StateTransitionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of state transition associated with applied rules.</description>
    <label>State Transition</label>
    <referenceTo>vlocity_cmt__VlocityStateTransition__c</referenceTo>
    <relationshipLabel>Object Applied Results</relationshipLabel>
    <relationshipName>ObjectAppliedResults</relationshipName>
    <type>Lookup</type>
</CustomField>